Bug 936398 - fixed settings string to conform to UX guidelines

--- a/apps/settings/elements/about_more_info_developer.html
+++ b/apps/settings/elements/about_more_info_developer.html
@@ -64,7 +64,7 @@
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="devtools.debugger.remote-enabled">
-            <span data-l10n-id="remote-debugging">Remote Debugging</span>
+            <span data-l10n-id="remote-debugging">Remote debugging</span>
           </label>
         </li>
         <li>
@@ -129,7 +129,7 @@
         <li>
           <label class="pack-checkbox">
             <input type="checkbox" name="accessibility.screenreader">
-            <span data-l10n-id="screenReader">Screen Reader</span>
+            <span data-l10n-id="screenReader">Screen reader</span>
           </label>
         </li>
       </ul>
