--- a/apps/settings/elements/call.html
+++ b/apps/settings/elements/call.html
@@ -3,7 +3,7 @@
 
     <header>
       <a href="#root"><span class="icon icon-back">back</span></a>
-      <h1 data-l10n-id="callSettings"> Call Settings </h1>
+      <h1 data-l10n-id="callSettings"> Call settings </h1>
     </header>
 
     <div>
@@ -21,7 +21,7 @@
         <li id="menuItem-callWaiting" data-state="off">
           <label class="pack-switch checkbox-label">
             <input type="checkbox" data-ignore>
-            <span data-l10n-id="callWaiting">Call Waiting</span>
+            <span data-l10n-id="callWaiting">Call waiting</span>
           </label>
           <label class="alert-label" hidden>
             <span></span>
@@ -44,7 +44,7 @@
       </ul>
 
       <header>
-        <h2 data-l10n-id="callForwarding"> Call Forwarding </h2>
+        <h2 data-l10n-id="callForwarding"> Call forwarding </h2>
       </header>
       <ul>
         <li id="fdnSettingsBlocked" class="description" hidden>
@@ -82,7 +82,7 @@
         <p class="cw-alert-sub-p">
           <label class="pack-switch cw-alert-checkbox-label">
             <input type="checkbox" data-ignore>
-            <span data-l10n-id="callWaiting">Call Waiting</span>
+            <span data-l10n-id="callWaiting">Call waiting</span>
           </label>
         </p>
       </section>
