Bug 936398 - fixed settings string to conform to UX guidelines
bug936398 - sentence-cased string

--- a/apps/settings/index.html
+++ b/apps/settings/index.html
@@ -345,7 +345,7 @@
           </li>
           <li id="call-settings">
             <small id="call-desc" class="menu-item-desc"></small>
-            <a id="menuItem-callSettings" class="menu-item" href="#call" data-l10n-id="callSettings">Call Settings</a>
+            <a id="menuItem-callSettings" class="menu-item" href="#call" data-l10n-id="callSettings">Call settings</a>
           </li>
           <li id="messaging-settings">
             <small id="messaging-desc" class="menu-item-desc"></small>
@@ -487,7 +487,7 @@
 
         <!-- Main :: SIM Toolkit -->
         <header id="icc-mainheader">
-          <h2 data-l10n-id="operatorServices">Operator Services</h2>
+          <h2 data-l10n-id="operatorServices">Operator services</h2>
         </header>
         <ul id="icc-mainentry">
           <li>
