--- a/apps/video/view.html
+++ b/apps/video/view.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" type="text/css" href="style/video.css" />
     <link rel="stylesheet" type="text/css" href="style/spinner.css" />
     <link rel="stylesheet" type="text/css" href="shared/style/status.css" />
+    <link rel="stylesheet" type="text/css" href="style/video_tablet.css" media="(min-height: 768px) and (min-width: 768px)" />
   </head>
-  <body role="application" class="skin-dark">
+  <body role="application" class="skin-dark layout-fullscreen-player">
     <!-- display this at startup while we create thumbnails -->
     <div id="spinner-overlay"><div id="spinner"></div></div>
-    <div id="fullscreen-view">
-      <video id="player" preload="metadata"></video>
+    <div id="player-view">
+      <div id="video-container">
+        <video id="player" preload="metadata"></video>
+      </div>
       <!-- video controls -->
       <div id="videoControls" class="hidden">
         <section role="region" class="skin-dark">
