Bug 949966 - [Gallery] empty message of delete dialog

--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -229,31 +229,27 @@
 
     <!-- display messages like "No Photos" and "No SD Card" here -->
     <form id="overlay" role="dialog" data-type="confirm" class="hidden">
-      <div>
-        <section id="overlay-content">
-          <h1 id="overlay-title"></h1>
-          <p id="overlay-text"></p>
-        </section>
-        <menu id="overlay-menu" class="hidden">
-          <button type="button" id="storage-setting-button" class="hidden full"
-                  data-l10n-id="storage-setting-button">Media storage settings</button>
-          <button type="button" id="overlay-camera-button" class="hidden full"
-                  data-l10n-id="overlay-camera-button">Go to Camera</button>
-          <button type="button" id="overlay-cancel-button" data-l10n-id="cancel" class="full">Cancel</button>
-        </menu>
-      </div>
+      <section id="overlay-content">
+        <h1 id="overlay-title">tre</h1>
+        <p id="overlay-text">ter</p>
+      </section>
+      <menu id="overlay-menu" class="hidden">
+        <button type="button" id="storage-setting-button" class="hidden full"
+                data-l10n-id="storage-setting-button">Media storage settings</button>
+        <button type="button" id="overlay-camera-button" class="hidden full"
+                data-l10n-id="overlay-camera-button">Go to Camera</button>
+        <button type="button" id="overlay-cancel-button" data-l10n-id="cancel" class="full">Cancel</button>
+      </menu>
     </form>
 
     <form id="confirm-dialog" role="dialog" data-type="confirm" class="hidden">
-      <div>
-        <section>
-          <p id="confirm-msg"></p>
-        </section>
-        <menu>
-          <button id="confirm-cancel"></button>
-          <button id="confirm-ok"></button>
-        </menu>
-      </div>
+      <section>
+        <p id="confirm-msg"></p>
+      </section>
+      <menu>
+        <button id="confirm-cancel"></button>
+        <button id="confirm-ok"></button>
+      </menu>
     </form>
 
     <!-- Some SVG filters we use -->
