--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="style/search.css">
     <script defer src="js/search.js"></script>
     <script defer src="js/providers/contacts.js"></script>
+    <script defer src="js/providers/eme.js"></script>
     <script defer src="js/providers/local_apps.js"></script>
   <head>
   <body>
-    <div id="search-terms">
-      <!-- Default search message -->
-    </div>
+    <div id="search-terms"></div>
     <div id="search-suggestions">
     </div>
   </body>
