Bug 948095 - Output video statistics when playback stops
These stats are useful for simple performance analysis.

Conflicts:

	apps/video/index.html

--- a/apps/video/index.html
+++ b/apps/video/index.html
@@ -19,6 +19,7 @@
     <script defer src="shared/js/media/media_utils.js"></script>
     <script defer src="shared/js/blobview.js"></script>
     <script defer src="shared/js/media/get_video_rotation.js"></script>
+    <script defer src="shared/js/media/video_stats.js"></script>
     <script defer src="js/metadata.js"></script>
     <script defer src="js/db.js"></script>
     <script defer src="js/thumbnail_list.js"></script>
