Bug 950795 - [Messages] Reduce the use of ids in the "you received a message" notice

--- a/apps/sms/index.html
+++ b/apps/sms/index.html
@@ -177,14 +177,12 @@
             <section id="messages-new-message-notice"
                     role="notification"
                     class="hide">
-              <div id="new-message-notice-content">
-                <div id="new-message-notice-container-1">
-                  <div id="new-message-notice-text" data-l10n-id="new-message-notice-text">You have new messages</div>
-                  <div id="new-message-notice-contact">Contact</div>
-                </div>
-                <div id="new-message-notice-container-2">
-                  <a role="button" data-l10n-id="new-message-notice-a-text">read it</a>
-                </div>
+              <div>
+                <div data-l10n-id="new-message-notice-text">You have new messages</div>
+                <div class="contact">Contact</div>
+              </div>
+              <div>
+                <a role="button" data-l10n-id="new-message-notice-a-text">read it</a>
               </div>
             </section>
           </div>
