--- a/apps/settings/elements/phone_lock_passcode.html
+++ b/apps/settings/elements/phone_lock_passcode.html
@@ -19,8 +19,7 @@
       <input type="number" x-inputmode="digit" id="passcode-input" />
       <div class="passcode-container" id="passcode-container">
         <div class="passcode" id="passcode-pseudo-input">
-          <label data-l10n-id="create-a-passcode" data-mode="new,create">Create a Passcode</label>
-          <label data-l10n-id="passcode" data-mode="confirm,confirmLock,edit">Passcode</label>
+          <label data-l10n-id="passcode-heading">Passcode</label>
           <span class="passcode-digit"></span>
           <span class="passcode-digit"></span>
           <span class="passcode-digit"></span>
