Bug 951140 - [Rocketbar] Input content and visual tweaks r=amir

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -1226,7 +1226,7 @@
 
       <button id="fullscreen-software-home-button" data-z-index-level="fullscreen-software-home-button"></button>
       <div id="search-bar" class="search-bar" data-z-index-level="search-bar">
-        <input id="search-input" type="search" class="search-input"></input>
+        <input id="search-input" type="search" class="search-input" x-inputmode="verbatim" placeholder="Search or typed address" data-l10n-id="search-or-type-address"></input>
         <div id="search-container" class="search-container">
         </div>
       </div>
