Bug 950469 - [Setringtone][l12y] 'Set as ringtone' string is reused on title and button

--- a/apps/setringtone/share.html
+++ b/apps/setringtone/share.html
@@ -25,7 +25,7 @@
       </section>
       <menu>
         <button type="button" id="cancel" data-l10n-id="cancel">cancel</button>
-        <button type="button" id="set" data-l10n-id="setringtone"
+        <button type="button" id="set" data-l10n-id="setringtone-button"
                 class="recommend" disabled>set ringtone</button>
       </menu>
     </form>
