--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -27,6 +27,7 @@
 
     <script defer src="js/system.js"></script>
     <script defer src="js/base_ui.js"></script>
+    <script defer src="js/places.js"></script>
 
     <script defer src="js/orientation_manager.js"></script>
     <!--
