Bug 951242 - [Rocketbar] E.me should show result icons [r=kgrandon]

--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -11,7 +11,10 @@
     <script defer src="js/providers/local_apps.js"></script>
   <head>
   <body>
-    <div id="search-suggestions">
+    <div id="search-results">
+      <section id="contacts"></section>
+      <section id="localapps"></section>
+      <section id="everythingme"></section>
     </div>
   </body>
 </html>
