Bug 932729 - [DSDS][Gaia][Sim Manager] add rename functions
- add rename button for simcardManager
- open a new key/object in mozSettings to store this information

--- a/apps/settings/elements/sim_manager.html
+++ b/apps/settings/elements/sim_manager.html
@@ -52,6 +52,7 @@
           <p class="sim-card-operator"></p>
           <p class="sim-card-number"></p>
         </div>
+        <button class="rename-button" data-index="${sim-index}" type="button">Rename</button>
       </li>
       -->
     </div>
