Bug 952098 - Add places to rocketbar providers. r=kgrandon

--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -9,9 +9,11 @@
     <script defer src="js/providers/contacts.js"></script>
     <script defer src="js/providers/eme.js"></script>
     <script defer src="js/providers/local_apps.js"></script>
+    <script defer src="js/providers/history.js"></script>
   <head>
   <body>
     <div id="search-results">
+      <section id="history"></section>
       <section id="contacts"></section>
       <section id="localapps"></section>
       <section id="everythingme"></section>
