Bug 952158 - [Rocketbar] Add clear button r=vingtetun

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -1229,8 +1229,13 @@
 
       <button id="fullscreen-software-home-button" data-z-index-level="fullscreen-software-home-button"></button>
       <div id="search-bar" data-z-index-level="search-bar">
-        <a href="#" id="search-cancel" data-l10n-id="cancel">Cancel</a>
-        <input id="search-input" type="search" x-inputmode="verbatim" placeholder="Search or typed address" data-l10n-id="search-or-type-address"></input>
+        <form class="skin-dark">
+          <p>
+            <input id="search-input" type="search" x-inputmode="verbatim" placeholder="Search or typed address" data-l10n-id="search-or-type-address"></input>
+            <button id="search-reset" type="reset"></button>
+            <a href="#" id="search-cancel" data-l10n-id="cancel">Cancel</a>
+          </p>
+        </form>
         <div id="search-container"></div>
       </div>
 
