Bug 948314 - [Rocketbar] Marketplace App Search r=vingtetun

--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -9,12 +9,14 @@
     <script defer src="js/providers/contacts.js"></script>
     <script defer src="js/providers/eme.js"></script>
     <script defer src="js/providers/local_apps.js"></script>
+    <script defer src="js/providers/marketplace.js"></script>
   <head>
   <body>
     <div id="search-results">
-      <section id="contacts"></section>
-      <section id="localapps"></section>
-      <section id="everythingme"></section>
+      <section id="contacts" class="local"></section>
+      <section id="localapps" class="apps"></section>
+      <section id="marketplace" class="apps"></section>
+      <section id="everythingme" class="apps"></section>
     </div>
   </body>
 </html>
