Bug 952441 - [Rocketbar] Do not resize current app on keyboard r=vingtetun

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -1231,7 +1231,7 @@
       <div id="search-bar" data-z-index-level="search-bar">
         <form class="skin-dark">
           <p>
-            <input id="search-input" type="search" x-inputmode="verbatim" placeholder="Search or typed address" data-l10n-id="search-or-type-address"></input>
+            <input id="search-input" type="search" x-inputmode="verbatim" placeholder="Search or type address" data-l10n-id="search-or-type-address"></input>
             <button id="search-reset" type="reset"></button>
             <a href="#" id="search-cancel" data-l10n-id="cancel">Cancel</a>
           </p>
