Bug 952158 - Guard form submission r=vingtetun

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -1229,7 +1229,7 @@
 
       <button id="fullscreen-software-home-button" data-z-index-level="fullscreen-software-home-button"></button>
       <div id="search-bar" data-z-index-level="search-bar">
-        <form class="skin-dark">
+        <form id="search-form" class="skin-dark">
           <p>
             <input id="search-input" type="search" x-inputmode="verbatim" placeholder="Search or typed address" data-l10n-id="search-or-type-address"></input>
             <button id="search-reset" type="reset"></button>
