Bug 944288 [UITEST] add image share activity - bug fixed

--- a/test_apps/uitest/index.html
+++ b/test_apps/uitest/index.html
@@ -61,6 +61,7 @@
         <li><a href="#test=API/picktype">Pick Photo/Video</a></li>
         <li><a href="#test=API/pickvideo">Pick Video</a></li>
         <li><a href="#test=API/savebookmark">Save bookmark</a></li>
+        <li><a href="#test=API/shareimage">Share Image</a></li>
         <li><a href="#test=API/viewphoto">View Photo</a></li>
         <li><a href="#test=API/downloads">Downloads</a></li>
       </ul>
