Bug 952805 - [Usage][l12y] wifi-usage and mobile-usage are reused in different contexts

--- a/apps/costcontrol/settings.html
+++ b/apps/costcontrol/settings.html
@@ -109,10 +109,10 @@
           <ul class="settings">
             <li>
               <p id="mobile-data-usage">
-                <span class="usage"></span> <span data-l10n-id="mobile-usage">Mobile usage</span>
+                <span class="usage"></span> <span data-l10n-id="mobile-usage-settings">Mobile usage</span>
               </p>
               <p id="wifi-data-usage">
-                <span class="usage"></span> <span data-l10n-id="wifi-usage">Wi-Fi usage</span>
+                <span class="usage"></span> <span data-l10n-id="wifi-usage-settings">Wi-Fi usage</span>
               </p>
               <p class="meta"></p>
               <button data-l10n-id="reset" id="reset-data-usage">Reset</button>
