--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -6,17 +6,20 @@
     <link rel="stylesheet" href="style/search.css">
     <script defer src="shared/js/url_helper.js"></script>
     <script defer src="js/search.js"></script>
+    <script defer src="js/eme/eme.js"></script>
     <script defer src="js/providers/contacts.js"></script>
-    <script defer src="js/providers/eme.js"></script>
+    <script defer src="js/providers/suggestions.js"></script>
+    <script defer src="js/providers/webresults.js"></script>
     <script defer src="js/providers/local_apps.js"></script>
     <script defer src="js/providers/marketplace.js"></script>
   <head>
   <body>
     <div id="search-results">
+      <section id="suggestions" class="suggestions"></section>
       <section id="contacts" class="local"></section>
       <section id="localapps" class="apps"></section>
       <section id="marketplace" class="apps"></section>
-      <section id="everythingme" class="apps"></section>
+      <section id="webresults" class="apps"></section>
     </div>
   </body>
 </html>
