Bug 944287 [UITEST] add Share URL activity - bug fixed

--- a/test_apps/uitest/index.html
+++ b/test_apps/uitest/index.html
@@ -63,6 +63,7 @@
         <li><a href="#test=API/pickvideo">Pick Video</a></li>
         <li><a href="#test=API/savebookmark">Save bookmark</a></li>
         <li><a href="#test=API/shareimage">Share Image</a></li>
+        <li><a href="#test=API/shareurl">Share URL</a></li>
         <li><a href="#test=API/viewphoto">View Photo</a></li>
         <li><a href="#test=API/downloads">Downloads</a></li>
       </ul>
