Bug 944289 [UITEST] add Compose Email activity - bug fixed

--- a/test_apps/uitest/index.html
+++ b/test_apps/uitest/index.html
@@ -44,6 +44,7 @@
       <ul class="list">
         <li><a href="#test=API/audiotag">audio tag</a></li>
         <li><a href="#test=API/browseractivities">Browser Activities</a></li>
+        <li><a href="#test=API/composeemail">Compose Email</a></li>
         <li><a href="#test=API/contacts">Contacts</a></li>
         <li><a href="#test=API/csp">CSP Warning</a></li>
         <li><a href="#test=API/dialnumber">Dial Number</a></li>
