--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -7,6 +7,8 @@
     <script defer src="shared/js/url_helper.js"></script>
     <script defer src="js/search.js"></script>
     <script defer src="js/eme/eme.js"></script>
+    <script defer src="js/providers/provider.js"></script>
+    <script defer src="js/providers/app_provider.js"></script>
     <script defer src="js/providers/contacts.js"></script>
     <script defer src="js/providers/suggestions.js"></script>
     <script defer src="js/providers/webresults.js"></script>
@@ -17,9 +19,10 @@
     <div id="search-results">
       <section id="suggestions" class="suggestions"></section>
       <section id="contacts" class="local"></section>
-      <section id="localapps" class="apps"></section>
-      <section id="marketplace" class="apps"></section>
-      <section id="webresults" class="apps"></section>
-    </div>
+      <section class="apps">
+        <section id="localapps"></section>
+        <section id="marketplace"></section>
+        <section id="webresults"></section>
+    </section>
   </body>
 </html>
