--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -7,6 +7,7 @@
     <script defer src="shared/js/url_helper.js"></script>
     <script defer src="js/search.js"></script>
     <script defer src="js/eme/eme.js"></script>
+    <script defer src="js/eme/api.js"></script>
     <script defer src="js/providers/provider.js"></script>
     <script defer src="js/providers/app_provider.js"></script>
     <script defer src="js/providers/contacts.js"></script>
