--- a/apps/sms/index.html
+++ b/apps/sms/index.html
@@ -335,10 +335,12 @@
         <h1 class="subject">
           ${subject}
         </h1>
-        <aside class="pack-end">
-          <progress></progress>
-        </aside>
-        <p>${bodyHTML}</p>
+        <div class="message-content">
+          <aside class="pack-end">
+            <progress></progress>
+          </aside>
+          <p>${bodyHTML}</p>
+        </div>
       </section>
       -->
     </div>
