--- a/apps/music/open.html
+++ b/apps/music/open.html
@@ -8,6 +8,7 @@
     <!-- Include shared building blocks -->
     <link rel="stylesheet" type="text/css" href="shared/style/headers.css"/>
     <link rel="stylesheet" type="text/css" href="shared/style/status.css" />
+    <link rel="stylesheet" type="text/css" href="shared/style_unstable/progress_activity.css"/>
     <!-- Localization -->
     <link rel="resource" type="application/l10n" href="locales/locales.ini">
     <!-- Shared code -->
