--- a/apps/sms/index.html
+++ b/apps/sms/index.html
@@ -25,19 +25,44 @@
     <link rel="resource" type="application/l10n" href="locales/locales.ini">
     <link rel="resource" type="application/l10n" href="shared/locales/date.ini">
     <!-- Shared code -->
-    <script defer src="shared/js/l10n.js"></script>
-    <!--
-    <script defer src="shared/js/l10n_date.js"></script>
     <script defer src="shared/js/async_storage.js"></script>
+    <script defer src="shared/js/l10n.js"></script>
+    <script defer src="shared/js/l10n_date.js"></script>
     <script defer src="shared/js/notification_helper.js"></script>
     <script defer src="shared/js/gesture_detector.js"></script>
     <script defer src="shared/js/settings_url.js"></script>
     <script defer src="shared/js/template.js"></script>
     <script defer src="shared/js/mime_mapper.js"></script>
+    <script defer src="js/dialog.js"></script>
+    <script defer src="js/blacklist.js"></script>
+    <script defer src="js/contacts.js"></script>
+    <script defer src="js/drafts.js"></script>
+    <script defer src="js/recipients.js"></script>
+    <script defer src="js/threads.js"></script>
+    <script defer src="js/message_manager.js"></script>
+    <script defer src="js/attachment.js"></script>
+    <script defer src="js/attachment_menu.js"></script>
+    <script defer src="js/thread_list_ui.js"></script>
+    <script defer src="js/thread_ui.js"></script>
+    <script defer src="js/compose.js"></script>
+    <script defer src="js/waiting_screen.js"></script>
+    <script defer src="js/utils.js"></script>
+    <script defer src="js/fixed_header.js"></script>
+    <script defer src="js/time_headers.js"></script>
+    <script defer src="js/activity_picker.js"></script>
+    <script defer src="js/wbmp.js"></script>
+    <script defer src="js/smil.js"></script>
+    <script defer src="js/link_helper.js"></script>
+    <script defer src="js/action_menu.js"></script>
+    <script defer src="js/link_action_handler.js"></script>
+    <script defer src="js/settings.js"></script>
+    <script defer src="js/notify.js"></script>
+    <script defer src="js/activity_handler.js"></script>
+    <script defer src="js/contact_renderer.js"></script>
+    <script defer src="js/information.js"></script>
     <script defer src="shared/js/fb/fb_request.js"></script>
     <script defer src="shared/js/fb/fb_data_reader.js"></script>
     <script defer src="shared/js/fb/fb_reader_utils.js"></script>
-    -->
     <script defer src="shared/js/lazy_loader.js"></script>
     <script defer src="js/startup.js"></script>
   </head>
