--- a/apps/wallpaper/share.html
+++ b/apps/wallpaper/share.html
@@ -12,13 +12,13 @@
     <script type="text/javascript" src="shared/js/l10n.js"></script>
     <script defer src="shared/js/gesture_detector.js"></script>
     <!-- Specific code -->
-    <script type="text/javascript" defer src="js/share.js"></script>
+   
+   <script type="text/javascript" defer="" src="js/share.js"></script>
+   <script type="text/javascript" defer="" src="js/imageCropEditor.js"></script> 
   </head>
 
   <body>
-    <div id="preview">
-      <img id="previewImage" />
-    </div>
+   <div id="crop-frame"></div>
     <div id="buttons">
       <button id="cancel" data-l10n-id="cancel"></button>
       <button id="set-wallpaper" data-l10n-id="setaswallpaper"></button>
