--- a/apps/video/index.html
+++ b/apps/video/index.html
@@ -169,7 +169,8 @@
         <p id="overlay-text"></p>
       </section>
       <menu id="overlay-menu" class="hidden">
-        <button type="button" id="overlay-action-button" class="full"></button>
+        <button type="button" id="storage-setting-button" class="full"
+                data-l10n-id="storage-setting-button">Media storage settings</button>
       </menu>
     </form>
 
