Bug 903250 : Support sharing of URLs; r=reviews.

--- a/apps/browser/index.html
+++ b/apps/browser/index.html
@@ -31,6 +31,7 @@
 
     <!-- Specific code -->
     <script defer src="js/browser.js"></script>
+    <script defer src="js/nfc.js"></script>
     <script defer src="js/browser_db.js"></script>
     <script defer src="js/toolbar.js"></script>
     <script defer src="js/utilities.js"></script>
