--- a/apps/clock/onring.html
+++ b/apps/clock/onring.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="ring-display">
+    <div class="ring-display" data-ring-type="alarm">
       <div id="ring-icon"></div>
       <div id="ring-clock">
         <div id="ring-clock-display">
