Bug 950009 - [Costcontrol] Appear Balance options during some seconds when I press any options of 'Reset data usage'

--- a/apps/costcontrol/settings.html
+++ b/apps/costcontrol/settings.html
@@ -50,7 +50,7 @@
 
         <!-- Plantype -->
         <section class="view-scroll" role="region">
-          <ul id="plantype-settings" class="settings">
+          <ul id="plantype-settings" class="settings" aria-hidden="true">
            <li>
             <span class="button icon icon-dialog fake-select">
               <select id="widget-plantype" class="settings-option" data-option="plantype">
@@ -78,10 +78,10 @@
           </ul>
 
           <!-- Balance alerts -->
-          <header id="balance-settings">
+          <header id="balance-settings" aria-hidden="true">
             <h2 data-l10n-id="balance">Balance</h2>
           </header>
-          <ul class="settings">
+          <ul class="settings" aria-hidden="true">
             <li>
                 <p id="balance"></p>
                 <p class="meta"></p>
