Bug 937968 - [Settings] [Sound] No default value and title on ringer and alert selector page

--- a/apps/ringtones/pick.html
+++ b/apps/ringtones/pick.html
@@ -22,7 +22,7 @@
       <header>
         <button id="cancel"><span class="icon icon-back"></span></button>
         <menu type="toolbar"><button id="done" data-l10n-id="done">done</button></menu>
-        <h1 id="title"></h1>
+        <h1 id="title">select a tone</h1>
       </header>
     </section>
     <ul id="sounds"></ul>
