--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -344,6 +344,7 @@
     <!-- Rocketbar -->
     <script defer src="js/rocketbar.js"></script>
     <script defer src="js/title.js"></script>
+    <script defer src="shared/js/url_helper.js"></script>
     <link rel="stylesheet" type="text/css" href="style/rocketbar.css">
 
     <!-- Firefox Accounts-->
@@ -469,7 +470,9 @@
           <p>
             <input id="search-input" type="search" x-inputmode="verbatim" placeholder="Search or type address" data-l10n-id="search-or-type-address"></input>
             <button id="search-reset" type="reset"></button>
-            <a href="#" id="search-cancel" data-l10n-id="cancel">Cancel</a>
+            <a href="#" id="search-cancel">
+                <span data-l10n-id="cancel">Cancel</span>
+            </a>
           </p>
         </form>
         <div id="search-container"></div>
