Bug 950250 - Append Scrollable div behind scrollable content in settings. r+ :katz,:benwa

--- a/apps/settings/elements/app_permissions.html
+++ b/apps/settings/elements/app_permissions.html
@@ -9,17 +9,19 @@
     </header>
 
     <div>
-      <ul></ul>
+      <div>
+        <ul></ul>
 
-      <ul>
-        <li>
-          <button id="clear-bookmarks-app"
-                  style="visibility: hidden"
-                  data-l10n-id="clearBookmarkAppsData">
-            Clear bookmarks data
-          </button>
-        </li>
-      </ul>
+        <ul>
+          <li>
+            <button id="clear-bookmarks-app"
+                    style="visibility: hidden"
+                    data-l10n-id="clearBookmarkAppsData">
+              Clear bookmarks data
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <form role="dialog" data-type="confirm" hidden class="cb-alert">
