--- a/apps/settings/elements/improve_browser_os.html
+++ b/apps/settings/elements/improve_browser_os.html
@@ -7,71 +7,73 @@
     </header>
 
     <div>
-      <ul>
-        <li>
-          <label>
-            <button data-href="#improveBrowserOS-chooseFeedback"
-                    data-l10n-id="sendMozillaFeedback"
-                    class="icon icon-view">
-                Send Mozilla Feedback
-              </button>
-          </label>
-        </li>
-      </ul>
+      <div>
+        <ul>
+          <li>
+            <label>
+              <button data-href="#improveBrowserOS-chooseFeedback"
+                      data-l10n-id="sendMozillaFeedback"
+                      class="icon icon-view">
+                  Send Mozilla Feedback
+                </button>
+            </label>
+          </li>
+        </ul>
 
-      <header>
-        <h2 data-l10n-id="performanceData">Performance Data</h2>
-      </header>
-      <ul>
-        <li>
-          <p class="description">
-            <span data-l10n-id="performanceDataInfo">
-              Help us improve Browser OS by sharing data about your phone.
-            </span>
-            <a href="http://mozilla.org/telemetry" data-l10n-id="learn-more" class="link-text">Learn More</a>
-          </p>
-        </li>
-        <li>
-          <label class="pack-checkbox">
-            <input type="checkbox" name="debug.performance_data.shared">
-            <span data-l10n-id="sharePerformanceData">Submit performance data</span>
-          </label>
-        </li>
-      </ul>
+        <header>
+          <h2 data-l10n-id="performanceData">Performance Data</h2>
+        </header>
+        <ul>
+          <li>
+            <p class="description">
+              <span data-l10n-id="performanceDataInfo">
+                Help us improve Browser OS by sharing data about your phone.
+              </span>
+              <a href="http://mozilla.org/telemetry" data-l10n-id="learn-more" class="link-text">Learn More</a>
+            </p>
+          </li>
+          <li>
+            <label class="pack-checkbox">
+              <input type="checkbox" name="debug.performance_data.shared">
+              <span data-l10n-id="sharePerformanceData">Submit performance data</span>
+            </label>
+          </li>
+        </ul>
 
-      <header>
-        <h2 data-l10n-id="crashReports">Crash Reports</h2>
-      </header>
-      <ul>
-        <li class="description">
-          <p>
-            <span data-l10n-id="crashReportInfo">
-              Sending Mozilla a report when a crash occurs helps us fix the problem
-              for everyone. Reports are sent over Wi-Fi only.
-            </span>
-            <a href="#crashReports" data-l10n-id="learn-more" class="link-text">Learn More</a>
-          </p>
-        </li>
-        <li>
-          <label class="pack-radio">
-            <input type="radio" name="app.reportCrashes" value="always">
-            <span data-l10n-id="alwaysSendReport">Always send a report</span>
-          </label>
-        </li>
-        <li>
-          <label class="pack-radio">
-            <input type="radio" name="app.reportCrashes" value="never">
-            <span data-l10n-id="neverSendReport">Never send a report</span>
-          </label>
-        </li>
-        <li>
-          <label class="pack-radio">
-            <input type="radio" name="app.reportCrashes" value="ask" checked>
-            <span data-l10n-id="askToSendReport2">Ask each time</span>
-          </label>
-        </li>
-      </ul>
-    </div>
+        <header>
+          <h2 data-l10n-id="crashReports">Crash Reports</h2>
+        </header>
+        <ul>
+          <li class="description">
+            <p>
+              <span data-l10n-id="crashReportInfo">
+                Sending Mozilla a report when a crash occurs helps us fix the problem
+                for everyone. Reports are sent over Wi-Fi only.
+              </span>
+              <a href="#crashReports" data-l10n-id="learn-more" class="link-text">Learn More</a>
+            </p>
+          </li>
+          <li>
+            <label class="pack-radio">
+              <input type="radio" name="app.reportCrashes" value="always">
+              <span data-l10n-id="alwaysSendReport">Always send a report</span>
+            </label>
+          </li>
+          <li>
+            <label class="pack-radio">
+              <input type="radio" name="app.reportCrashes" value="never">
+              <span data-l10n-id="neverSendReport">Never send a report</span>
+            </label>
+          </li>
+          <li>
+            <label class="pack-radio">
+              <input type="radio" name="app.reportCrashes" value="ask" checked>
+              <span data-l10n-id="askToSendReport2">Ask each time</span>
+            </label>
+          </li>
+        </ul>
+      </div>
+  </div>
 
   </template>
 </element>
