--- a/apps/settings/elements/keyboard.html
+++ b/apps/settings/elements/keyboard.html
@@ -7,65 +7,67 @@
     </header>
 
     <div>
-      <ul hidden>
-        <li>
-          <label class="pack-checkbox">
-            <input type="checkbox" name="keyboard.vibration">
-            <span data-l10n-id="vibration">Vibration</span>
-          </label>
-        </li>
-        <li>
-          <label class="pack-checkbox">
-            <input type="checkbox" name="keyboard.clicksound" checked>
-            <span data-l10n-id="clickSound">Click sound</span>
-          </label>
-        </li>
-        <li>
-          <label class="pack-checkbox">
-            <input type="checkbox" name="keyboard.autocorrect">
-            <span data-l10n-id="autoCorrect">Auto correction</span>
-          </label>
-        </li>
-        <li>
-          <label class="pack-checkbox">
-            <input type="checkbox" name="keyboard.wordsuggestion">
-            <span data-l10n-id="wordSuggestion">Word Suggestion</span>
-          </label>
-        </li>
-      </ul>
+      <div>
+        <ul hidden>
+          <li>
+            <label class="pack-checkbox">
+              <input type="checkbox" name="keyboard.vibration">
+              <span data-l10n-id="vibration">Vibration</span>
+            </label>
+          </li>
+          <li>
+            <label class="pack-checkbox">
+              <input type="checkbox" name="keyboard.clicksound" checked>
+              <span data-l10n-id="clickSound">Click sound</span>
+            </label>
+          </li>
+          <li>
+            <label class="pack-checkbox">
+              <input type="checkbox" name="keyboard.autocorrect">
+              <span data-l10n-id="autoCorrect">Auto correction</span>
+            </label>
+          </li>
+          <li>
+            <label class="pack-checkbox">
+              <input type="checkbox" name="keyboard.wordsuggestion">
+              <span data-l10n-id="wordSuggestion">Word Suggestion</span>
+            </label>
+          </li>
+        </ul>
 
-      <ul>
-        <li>
-          <a href="#keyboard-selection" data-l10n-id="selectedKeyboards">Selected keyboards</a>
-        </li>
-      </ul>
-      <header>
-        <h2 data-l10n-id="installedInputMethods">Installed input methods</h2>
-      </header>
-      <ul id="allKeyboardList" hidden>
-      </ul>
-
-      <div id="textLayoutList" hidden>
+        <ul>
+          <li>
+            <a href="#keyboard-selection" data-l10n-id="selectedKeyboards">Selected keyboards</a>
+          </li>
+        </ul>
         <header>
-          <h2 data-l10n-id="keyboardlayouts">layouts</h2>
+          <h2 data-l10n-id="installedInputMethods">Installed input methods</h2>
         </header>
-        <ul></ul>
-      </div>
+        <ul id="allKeyboardList" hidden>
+        </ul>
 
-      <div id="numberLayoutList" hidden>
-        <header>
-          <h2 data-l10n-id="numberKeyboardLayouts">Number Layouts</h2>
-        </header>
-        <ul></ul>
-      </div>
+        <div id="textLayoutList" hidden>
+          <header>
+            <h2 data-l10n-id="keyboardlayouts">layouts</h2>
+          </header>
+          <ul></ul>
+        </div>
 
-      <div id="optionLayoutList" hidden>
-        <header>
-          <h2 data-l10n-id="optionKeyboardLayouts">Option Layouts</h2>
-        </header>
-        <ul></ul>
-      </div>
+        <div id="numberLayoutList" hidden>
+          <header>
+            <h2 data-l10n-id="numberKeyboardLayouts">Number Layouts</h2>
+          </header>
+          <ul></ul>
+        </div>
 
+        <div id="optionLayoutList" hidden>
+          <header>
+            <h2 data-l10n-id="optionKeyboardLayouts">Option Layouts</h2>
+          </header>
+          <ul></ul>
+        </div>
+
+      </div>
     </div>
 
     <script defer src="shared/js/manifest_helper.js"></script>
