--- a/apps/settings/elements/call.html
+++ b/apps/settings/elements/call.html
@@ -7,68 +7,70 @@
     </header>
 
     <div>
-      <ul>
-        <li>
-          <small id="voiceMail-desc"></small>
-          <a data-href="#call-voiceMailSettings" data-l10n-id="voiceMail">Voicemail</a>
-        </li>
-        <li id="menuItem-voicePrivacyMode" hidden>
-          <label class="pack-switch checkbox-label">
-            <input type="checkbox" data-ignore>
-            <span data-l10n-id="voicePrivacyMode">Voice privacy mode</span>
-          </label>
-        </li>
-        <li id="menuItem-callWaiting" data-state="off">
-          <label class="pack-switch checkbox-label">
-            <input type="checkbox" data-ignore>
-            <span data-l10n-id="callWaiting">Call Waiting</span>
-          </label>
-          <label class="alert-label" hidden>
-            <span></span>
-          </label>
-        </li>
-        <li id="menuItem-callerId" aria-disabled="true">
-          <a data-l10n-id="callerId">Caller ID</a>
-          <span class="button icon icon-dialog">
-            <select id="ril-callerId" data-setting="ril.callerId">
-              <option value="CLIR_DEFAULT" data-l10n-id="callerId-default">Network default</option>
-              <option value="CLIR_INVOCATION" data-l10n-id="callerId-hide">Hide number</option>
-              <option value="CLIR_SUPPRESSION" data-l10n-id="callerId-show">Show number</option>
-            </select>
-          </span>
-        </li>
-        <li>
-          <small id="fdnSettings-desc"></small>
-          <a data-href="#call-fdnSettings" data-l10n-id="fdnSettings">Fixed dialing numbers</a>
-        </li>
-      </ul>
+      <div>
+        <ul>
+          <li>
+            <small id="voiceMail-desc"></small>
+            <a data-href="#call-voiceMailSettings" data-l10n-id="voiceMail">Voicemail</a>
+          </li>
+          <li id="menuItem-voicePrivacyMode" hidden>
+            <label class="pack-switch checkbox-label">
+              <input type="checkbox" data-ignore>
+              <span data-l10n-id="voicePrivacyMode">Voice privacy mode</span>
+            </label>
+          </li>
+          <li id="menuItem-callWaiting" data-state="off">
+            <label class="pack-switch checkbox-label">
+              <input type="checkbox" data-ignore>
+              <span data-l10n-id="callWaiting">Call Waiting</span>
+            </label>
+            <label class="alert-label" hidden>
+              <span></span>
+            </label>
+          </li>
+          <li id="menuItem-callerId" aria-disabled="true">
+            <a data-l10n-id="callerId">Caller ID</a>
+            <span class="button icon icon-dialog">
+              <select id="ril-callerId" data-setting="ril.callerId">
+                <option value="CLIR_DEFAULT" data-l10n-id="callerId-default">Network default</option>
+                <option value="CLIR_INVOCATION" data-l10n-id="callerId-hide">Hide number</option>
+                <option value="CLIR_SUPPRESSION" data-l10n-id="callerId-show">Show number</option>
+              </select>
+            </span>
+          </li>
+          <li>
+            <small id="fdnSettings-desc"></small>
+            <a data-href="#call-fdnSettings" data-l10n-id="fdnSettings">Fixed dialing numbers</a>
+          </li>
+        </ul>
 
-      <header>
-        <h2 data-l10n-id="callForwarding"> Call Forwarding </h2>
-      </header>
-      <ul>
-        <li id="fdnSettingsBlocked" class="description" hidden>
-          <p data-l10n-id="fdn-enabled-warning">
-            Call forwarding is disabled by FDN.
-          </p>
-        </li>
-        <li id="li-cfu-desc" aria-disabled="true">
-          <small id="cfu-desc"></small>
-          <a id="menuItem-callForwardingUnconditional" data-href="#call-cf-unconditionalSettings" data-l10n-id="callForwardingUnconditional">Always forward</a>
-        </li>
-        <li id="li-cfmb-desc" aria-disabled="true">
-          <small id="cfmb-desc"></small>
-          <a id="menuItem-callForwardingMobileBusy" data-href="#call-cf-mobileBusySettings" data-l10n-id="callForwardingMobileBusy">Forward when busy</a>
-        </li>
-        <li id="li-cfnrep-desc" aria-disabled="true">
-          <small id="cfnrep-desc"></small>
-          <a id="menuItem-callForwardingNoReply" data-href="#call-cf-noReplySettings" data-l10n-id="callForwardingNoReply">Forward when unanswered</a>
-        </li>
-        <li id="li-cfnrea-desc" aria-disabled="true">
-          <small id="cfnrea-desc"></small>
-          <a id="menuItem-callForwardingNotReachable" data-href="#call-cf-notReachableSettings" data-l10n-id="callForwardingNotReachable">Forward when unreachable</a>
-        </li>
-      </ul>
+        <header>
+          <h2 data-l10n-id="callForwarding"> Call Forwarding </h2>
+        </header>
+        <ul>
+          <li id="fdnSettingsBlocked" class="description" hidden>
+            <p data-l10n-id="fdn-enabled-warning">
+              Call forwarding is disabled by FDN.
+            </p>
+          </li>
+          <li id="li-cfu-desc" aria-disabled="true">
+            <small id="cfu-desc"></small>
+            <a id="menuItem-callForwardingUnconditional" data-href="#call-cf-unconditionalSettings" data-l10n-id="callForwardingUnconditional">Always forward</a>
+          </li>
+          <li id="li-cfmb-desc" aria-disabled="true">
+            <small id="cfmb-desc"></small>
+            <a id="menuItem-callForwardingMobileBusy" data-href="#call-cf-mobileBusySettings" data-l10n-id="callForwardingMobileBusy">Forward when busy</a>
+          </li>
+          <li id="li-cfnrep-desc" aria-disabled="true">
+            <small id="cfnrep-desc"></small>
+            <a id="menuItem-callForwardingNoReply" data-href="#call-cf-noReplySettings" data-l10n-id="callForwardingNoReply">Forward when unanswered</a>
+          </li>
+          <li id="li-cfnrea-desc" aria-disabled="true">
+            <small id="cfnrea-desc"></small>
+            <a id="menuItem-callForwardingNotReachable" data-href="#call-cf-notReachableSettings" data-l10n-id="callForwardingNotReachable">Forward when unreachable</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <form role="dialog" data-type="confirm" hidden class="cw-alert">
