--- a/apps/settings/elements/carrier.html
+++ b/apps/settings/elements/carrier.html
@@ -7,63 +7,65 @@
     </header>
 
     <div>
-      <ul>
-        <li>
-          <small id="dataNetwork-desc"></small>
-          <span data-l10n-id="dataNetwork">Carrier</span>
-        </li>
-      </ul>
+      <div>
+        <ul>
+          <li>
+            <small id="dataNetwork-desc"></small>
+            <span data-l10n-id="dataNetwork">Carrier</span>
+          </li>
+        </ul>
 
-      <header>
-        <h2 data-l10n-id="dataConnectivity"> Data Connectivity </h2>
-      </header>
-      <ul>
-        <li id="menuItem-enableDataCall" aria-disabled="true">
-          <label class="pack-switch">
-            <input type="checkbox" name="ril.data.enabled" class="uninit">
-            <small id="dataConnection-desc"></small>
-            <span data-l10n-id="dataConnection">Data Connection</span>
-          </label>
-        </li>
-        <li id="dataConnection-expl" class="explanation" data-l10n-id="dataConnection-warning-message" hidden></li>
-        <li>
-          <label class="pack-switch">
-            <input type="checkbox" name="ril.data.roaming_enabled" class="uninit">
-            <span data-l10n-id="dataRoaming">Data Roaming</span>
-          </label>
-        </li>
-        <li id="dataRoaming-expl" class="explanation" data-l10n-id="dataRoaming-warning-message" hidden></li>
-      </ul>
+        <header>
+          <h2 data-l10n-id="dataConnectivity"> Data Connectivity </h2>
+        </header>
+        <ul>
+          <li id="menuItem-enableDataCall" aria-disabled="true">
+            <label class="pack-switch">
+              <input type="checkbox" name="ril.data.enabled" class="uninit">
+              <small id="dataConnection-desc"></small>
+              <span data-l10n-id="dataConnection">Data Connection</span>
+            </label>
+          </li>
+          <li id="dataConnection-expl" class="explanation" data-l10n-id="dataConnection-warning-message" hidden></li>
+          <li>
+            <label class="pack-switch">
+              <input type="checkbox" name="ril.data.roaming_enabled" class="uninit">
+              <span data-l10n-id="dataRoaming">Data Roaming</span>
+            </label>
+          </li>
+          <li id="dataRoaming-expl" class="explanation" data-l10n-id="dataRoaming-warning-message" hidden></li>
+        </ul>
 
-      <header>
-        <h2 data-l10n-id="advancedSettings"> Advanced Settings </h2>
-      </header>
-      <ul>
-        <li>
-          <label>
-            <button class="icon icon-view" data-href="#carrier-operatorSettings"
-              data-l10n-id="networkOperator"> Network Operator </button>
-          </label>
-        </li>
-        <li>
-          <label>
-            <button class="icon icon-view" data-href="#carrier-dataSettings"
-              data-l10n-id="dataSettings">Data Settings</button>
-          </label>
-        </li>
-        <li>
-          <label>
-            <button class="icon icon-view" data-href="#carrier-mmsSettings"
-              data-l10n-id="messageSettings">Message Settings</button>
-          </label>
-        </li>
-        <li>
-          <label>
-            <button class="icon icon-view" data-href="#carrier-suplSettings"
-              data-l10n-id="suplSettings">A-GPS Settings</button>
-          </label>
-        </li>
-      </ul>
+        <header>
+          <h2 data-l10n-id="advancedSettings"> Advanced Settings </h2>
+        </header>
+        <ul>
+          <li>
+            <label>
+              <button class="icon icon-view" data-href="#carrier-operatorSettings"
+                data-l10n-id="networkOperator"> Network Operator </button>
+            </label>
+          </li>
+          <li>
+            <label>
+              <button class="icon icon-view" data-href="#carrier-dataSettings"
+                data-l10n-id="dataSettings">Data Settings</button>
+            </label>
+          </li>
+          <li>
+            <label>
+              <button class="icon icon-view" data-href="#carrier-mmsSettings"
+                data-l10n-id="messageSettings">Message Settings</button>
+            </label>
+          </li>
+          <li>
+            <label>
+              <button class="icon icon-view" data-href="#carrier-suplSettings"
+                data-l10n-id="suplSettings">A-GPS Settings</button>
+            </label>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <script src="js/carrier.js"></script>
