--- a/apps/settings/elements/simpin.html
+++ b/apps/settings/elements/simpin.html
@@ -7,22 +7,24 @@
     </header>
 
     <div>
-      <header>
-        <h2 data-l10n-id="whatIsSimPin">What is a SIM PIN?</h2>
-      </header>
-      <ul>
-        <li class="description">
-          <p data-l10n-id="simPinIntro1">
-            A SIM PIN prevents access to the SIM card cellular data networks.
-            When it’s on, any device containing the SIM card will request the
-            PIN upon restart.
-          </p>
-          <p data-l10n-id="simPinIntro2">
-            A SIM PIN is not the same as the Passcode used to unlock the device.
-          </p>
-        </li>
-      </ul>
-      <ul id="simpin-container"></ul>
+      <div>
+        <header>
+          <h2 data-l10n-id="whatIsSimPin">What is a SIM PIN?</h2>
+        </header>
+        <ul>
+          <li class="description">
+            <p data-l10n-id="simPinIntro1">
+              A SIM PIN prevents access to the SIM card cellular data networks.
+              When it’s on, any device containing the SIM card will request the
+              PIN upon restart.
+            </p>
+            <p data-l10n-id="simPinIntro2">
+              A SIM PIN is not the same as the Passcode used to unlock the device.
+            </p>
+          </li>
+        </ul>
+        <ul id="simpin-container"></ul>
+      </div>
     </div>
 
     <script src="shared/js/template.js"></script>
