Bug 932258 - Recurring Calendar Events

--- a/apps/calendar/elements/modify_event.html
+++ b/apps/calendar/elements/modify_event.html
@@ -83,6 +83,32 @@
           </span>
         </li>
 
+        <li class="recurrences">
+          <h3 data-l10n-id="repeat">Repeat</h3>
+          <span class="button icon icon-dialog">
+            <select name="recurrences">
+              <option value="never" selected="selected">
+                <span data-l10n-id="never">Never</span>
+              </option>
+              <option value="everyDay">
+                <span data-l10n-id="every-day">Every Day</span>
+              </option>
+              <option value="everyWeek">
+                <span data-l10n-id="every-week">Every Week</span>
+              </option>
+              <option value="everyOtherWeek">
+                <span data-l10n-id="every-two-weeks">Every 2 Weeks</span>
+              </option>
+              <option value="everyMonth">
+                <span data-l10n-id="every-month">Every Month</span>
+              </option>
+              <option value="everyYear">
+                <span data-l10n-id="every-year">Every Year</span>
+              </option>
+            </select>
+          </span>
+        </li>
+
         <li>
           <h3 data-l10n-id="remind-me">Remind me</h3>
           <div class="alarms">
