Bug 958856 - [Clock] Use shared alameda.js

--- a/apps/clock/index.html
+++ b/apps/clock/index.html
@@ -267,6 +267,6 @@
       -->
     </div>
 
-    <script data-main="js/startup.js" src="js/alameda.js"></script>
+    <script data-main="js/startup.js" src="/shared/js/alameda.js"></script>
   </body>
 </html>
