--- a/apps/clock/onring.html
+++ b/apps/clock/onring.html
@@ -29,7 +29,7 @@
       </div>
       </div>
     </div>
-    <script data-main="js/onring.js" src="js/alameda.js"></script>
+    <script data-main="js/onring.js" src="/shared/js/alameda.js"></script>
   </body>
 </html>
 
