Bug 951978 - (secure-window) [Window Management] Implement Secure Window (for Secure Camera App on Lockscreen)

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -308,6 +308,9 @@
     <script defer src="js/activity_window_factory.js"></script>
     <script defer src="js/app_window_factory.js"></script>
     <script defer src="js/app_window_manager.js"></script>
+    <script defer src="js/secure_window.js"></script>
+    <script defer src="js/secure_window_factory.js"></script>
+    <script defer src="js/secure_window_manager.js"></script>
     <script defer src="js/visibility_manager.js"></script>
     <script defer src="js/layout_manager.js"></script>
 
